# ros_2_docker

./: README.md  compile_flags.txt  create_robot.md  gazebo_simoleitore.md  gazebo_simulator.md  install_docker_and_download_ros.md  install_ros_docker.md  readmy.md  run_docker_compose.md  start_ros_porject.md
Rover_completo_STL/: Parte2.STL  Parte3.SLDPRT  Parte3.STL  Parte4.STL  Parte5.STL  Parte6.STL  ROVER Assembly - Caixa rover-2 Asembly 2-1 Assembly-1 JC#202512141022-1.STL  ROVER Assembly - Caixa rover-2 Asembly 2-1 Assembly-2 JC#202512141021-1.STL  ROVER Assembly - Caixa rover-2 Asembly 2-1 Assembly-2 JC#202512141022-1.STL  ROVER Assembly - Caixa rover-2 Asembly 2-2 Assembly-1 JC#202512141021-1.STL  ROVER Assembly - Caixa rover-2 Asembly 2-2 Assembly-1 JC#202512141022-1.STL  ROVER Assembly - Caixa rover-2 Asembly 2-2 Assembly-2 JC#202512141021-1.STL  ROVER Assembly - Caixa rover-2 Asembly 2-2 Assembly-2 JC#202512141022-1.STL  ROVER Assembly - Caixa rover-2 Assem1^Caixa rover-1 JC#202507151155-1.STL  ROVER Assembly - Caixa rover-2 Assem1^Caixa rover-1 JC#202507151155-2.STL  ROVER Assembly - Caixa rover-2 Assem1^Caixa rover-1 JC#202507151155-3.STL  ROVER Assembly - Caixa rover-2 Assem1^Caixa rover-1 JC#202507151155-4.STL  ROVER Assembly - Caixa rover-2 Assem1^Caixa rover-1 RP#202511271907-1.STL  ROVER Assembly - Caixa rover-2 Assem1^Caixa rover-1 RP#202511271907-2.STL  ROVER Assembly - Caixa rover-2 Assem1^Caixa rover-1 RP#202511271907-3.STL  ROVER Assembly - Caixa rover-2 JC#202511101932-1.STL  (+74 more)
src/meu_pacote/: CMakeLists.txt
src/meu_pacote/src/: main.cpp
(+200 files in other folders)
